[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

[dependencies]
buddy-allocator = { path = "../buddy-allocator" }
bitflags = "1.2.1"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []